[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Profiles.gd" type="Script" id=1]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/profile_icon.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0588235 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.470588 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="Profiles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -110.0
margin_right = 80.0
margin_bottom = -49.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "Back"
flat = true

[node name="profiles" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -650.0
margin_top = -325.0
margin_right = 650.0
margin_bottom = 325.0
custom_constants/separation = 20

[node name="profile1" type="Button" parent="profiles"]
margin_right = 420.0
margin_bottom = 650.0
rect_min_size = Vector2( 420, 650 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="elements" type="VBoxContainer" parent="profiles/profile1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 647.0
custom_constants/separation = 10

[node name="container" type="CenterContainer" parent="profiles/profile1/elements"]
margin_right = 414.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="profile_icon" parent="profiles/profile1/elements/container" instance=ExtResource( 3 )]
position = Vector2( 207, 182 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="profiles/profile1/elements"]
margin_top = 410.0
margin_right = 414.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 1 )
text = "Profile 1"
align = 1

[node name="slot" type="Label" parent="profiles/profile1/elements"]
margin_top = 475.0
margin_right = 414.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 5 )
text = "Empty"
align = 1

[node name="profile2" type="Button" parent="profiles"]
margin_left = 440.0
margin_right = 860.0
margin_bottom = 650.0
rect_min_size = Vector2( 420, 650 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="elements" type="VBoxContainer" parent="profiles/profile2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 647.0
custom_constants/separation = 10

[node name="container" type="CenterContainer" parent="profiles/profile2/elements"]
margin_right = 414.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="profile_icon" parent="profiles/profile2/elements/container" instance=ExtResource( 3 )]
position = Vector2( 207, 182 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="profiles/profile2/elements"]
margin_top = 410.0
margin_right = 414.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 1 )
text = "Profile 2"
align = 1

[node name="slot" type="Label" parent="profiles/profile2/elements"]
margin_top = 475.0
margin_right = 414.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 5 )
text = "Empty"
align = 1

[node name="profile3" type="Button" parent="profiles"]
margin_left = 880.0
margin_right = 1300.0
margin_bottom = 650.0
rect_min_size = Vector2( 420, 650 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="elements" type="VBoxContainer" parent="profiles/profile3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 647.0
custom_constants/separation = 10

[node name="container" type="CenterContainer" parent="profiles/profile3/elements"]
editor/display_folded = true
margin_right = 414.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="profile_icon" parent="profiles/profile3/elements/container" instance=ExtResource( 3 )]
position = Vector2( 207, 182 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="profiles/profile3/elements"]
margin_top = 410.0
margin_right = 414.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 1 )
text = "Profile 3"
align = 1

[node name="slot" type="Label" parent="profiles/profile3/elements"]
margin_top = 475.0
margin_right = 414.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 5 )
text = "Empty"
align = 1

[connection signal="pressed" from="Label3" to="." method="_on_Label3_pressed"]
[connection signal="pressed" from="profiles/profile1" to="." method="_on_profile1_pressed"]
[connection signal="pressed" from="profiles/profile2" to="." method="_on_profile2_pressed"]
[connection signal="pressed" from="profiles/profile3" to="." method="_on_profile3_pressed"]
